# graphing-alculator

./: CMakeLists.txt  Model.cpp  Model.h  README.md
.cache/clangd/index/: Model.h.6187813BD9DB814D.idx  funciton_parser.h.07333508B2DC1DE1.idx  mainwindow.cpp.C63CAAC99C4010BD.idx  mainwindow.h.065323FA27B3057F.idx  qcustomplot.h.A0A8823514FEDFFA.idx
Model/: Model.cpp  Model.h  Model_Interface.cpp
QtPart/: CMakeLists.txt  main.cpp  mainwindow.ui
build-QtPart-Main-Debug/: CMakeCache.txt  qtcsettings.cmake
build-view-Desktop-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
contoller/: FunctionParser_Interface.cpp  fp  funciton_parser.h  function_parser  function_parser.cpp  function_parser_old_but_work  function_parser_old_but_work.cpp
graphic_interface/: CMakeLists.txt  launch.cpp  programwindow.cpp  programwindow.h
view/: gridwidget.cpp  gridwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomplot.cpp  view.pro
